--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^10.16.4",
+    "lottie-react": "^2.4.0",
     "next": "^14.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
