--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "daisyui": "^4.0.4",
     "framer-motion": "^10.16.4",
     "lottie-react": "^2.4.0",
     "next": "^14.0.2",
