--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "chart.js": "^4.0.0",
     "framer-motion": "^10.16.4",
     "lottie-react": "^2.4.0",
     "next": "^14.0.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
