--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "chart.js": "^4.0.0",
+    "cookies-next": "^4.1.0",
     "framer-motion": "^10.16.4",
     "lottie-react": "^2.4.0",
     "next": "^14.0.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
