--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.15",
     "@nestjs/typeorm": "^10.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
