--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
