--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "chart.js": "^4.0.0",
     "cookies-next": "^4.1.0",
     "framer-motion": "^10.16.4",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "lottie-react": "^2.4.0",
     "next": "^14.0.2",
     "react": "^18.2.0",
