--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "jspdf": "^2.5.1",
     "lottie-react": "^2.4.0",
     "next": "^14.0.2",
+    "puppeteer": "^21.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
